--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
+    "gray-matter": "^4.0.3",
+    "next-mdx-remote": "^3.0.8",
     "prettier": "2.5.1"
   }
 }
